--- a/automobile-price-prediction.ipynb
+++ b/automobile-price-prediction.ipynb
@@ -506,7 +506,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x228a6a16da0>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x25da82c5f60>"
       ]
      },
      "execution_count": 3,
@@ -5047,11 +5047,11 @@
     {
      "data": {
       "text/plain": [
-       "(0.7902140127941961,\n",
-       " DecisionTreeRegressor(criterion='friedman_mse', max_depth=10, max_features=2,\n",
-       "            max_leaf_nodes=10, min_impurity_decrease=0.0,\n",
-       "            min_impurity_split=None, min_samples_leaf=3,\n",
-       "            min_samples_split=3, min_weight_fraction_leaf=0, presort=False,\n",
+       "(0.9358187319244589,\n",
+       " DecisionTreeRegressor(criterion='friedman_mse', max_depth=None,\n",
+       "            max_features=2, max_leaf_nodes=15, min_impurity_decrease=0.0,\n",
+       "            min_impurity_split=None, min_samples_leaf=2,\n",
+       "            min_samples_split=2, min_weight_fraction_leaf=0, presort=False,\n",
        "            random_state=None, splitter='random'))"
       ]
      },
@@ -5080,11 +5080,11 @@
     {
      "data": {
       "text/plain": [
-       "(0.7474477735095756,\n",
-       " DecisionTreeRegressor(criterion='friedman_mse', max_depth=10, max_features=2,\n",
-       "            max_leaf_nodes=10, min_impurity_decrease=0.0,\n",
-       "            min_impurity_split=None, min_samples_leaf=3,\n",
-       "            min_samples_split=3, min_weight_fraction_leaf=0, presort=False,\n",
+       "(0.8766184749316029,\n",
+       " DecisionTreeRegressor(criterion='friedman_mse', max_depth=None,\n",
+       "            max_features=2, max_leaf_nodes=15, min_impurity_decrease=0.0,\n",
+       "            min_impurity_split=None, min_samples_leaf=2,\n",
+       "            min_samples_split=2, min_weight_fraction_leaf=0, presort=False,\n",
        "            random_state=None, splitter='random'))"
       ]
      },
@@ -5213,8 +5213,8 @@
    "source": [
     "|                     | Regressão linear | Regressão árvore de decisão | Regressão ridge |\n",
     "|:---------------------|:------------------:|:-----------------------------:|:-----------------:|\n",
-    "| R2 treino | 0.8029911012434218 | 0.9722267031888167 | 0.8029767633444065 |\n",
-    "| R2 teste  | 0.7915196245749629 | 0.9001869508829297 | 0.7906231498026017 |\n"
+    "| R2 treino | 0.8029911012434219 | 0.9358187319244589 | 0.8029767633444065 |\n",
+    "| R2 teste  | 0.7915196245749629 | 0.8766184749316029 | 0.7906231498026018 |\n"
    ]
   },
   {
@@ -5312,7 +5312,7 @@
     {
      "data": {
       "text/plain": [
-       "array([5299.33333333])"
+       "array([5275.])"
       ]
      },
      "execution_count": 48,
